Create map section

--- a/index.html
+++ b/index.html
@@ -35,17 +35,24 @@
 	<header></header>
 
 	<main>
-		<div class="container">
-			<div class="hero-banner">
-				<p>Products | Tracking & Telematics</p>
-				<h1>Track and monitor your fleet</h1>
-				<p>
-					Real-time visibility into the location, utilization, and health of vehicles, equipment, and trailers.
-				</p>
-				<button class="button-type-one">Get started</button>
-				<button class="button-type-two">Get a tour</button>
+		<section>
+			<div class="container">
+				<div class="hero-banner">
+					<p>Products | Tracking & Telematics</p>
+					<h1>Track and monitor your fleet</h1>
+					<p>
+						Real-time visibility into the location, utilization, and health of vehicles, equipment, and trailers.
+					</p>
+					<button class="button-type-one">Get started</button>
+					<button class="button-type-two">Get a tour</button>
+				</div>
 			</div>
-		</div>
+		</section>
+
+		<section class="map-section">
+
+		</section>
+
 	</main>
 
 	<footer></footer>
