Create map section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
 		</section>
 
 		<section class="map-section">
-
+			<div class="map-container">
+				<div id="map">
+					<!-- Map -->
+				</div>
+			</div>
 		</section>
 
 	</main>
