Add hero banner section

--- a/index.html
+++ b/index.html
@@ -32,21 +32,77 @@
 </head>
 
 <body>
-	<header></header>
-
-	<main>
-		<section>
-			<div class="container">
-				<div class="hero-banner">
-					<p>Products | Tracking & Telematics</p>
-					<h1>Track and monitor your fleet</h1>
-					<p>
-						Real-time visibility into the location, utilization, and health of vehicles, equipment, and trailers.
-					</p>
-					<button class="button-type-one">Get started</button>
-					<button class="button-type-two">Get a tour</button>
+	<header>
+		<div class="container">
+			<div class="desktop-navbar-container">
+				<div class="logo-container">
+					<img src="./assets/media/img/logo.png" alt="mapster-logo">
+				</div>
+				<div class="pages-container">
+					<a href="#">About</a>
+					<a href="#">Contact</a>
+					<button class="button-type-one" href="#">Login</>
 				</div>
 			</div>
+			<div class="mobile-navbar-container"></div>
+		</div>
+	</header>
+
+	<main>
+		<section class="hero-banner-section">
+			<div class="container">
+				<div class="hero-banner">
+					<div class="side-a">
+						<p>Products | Tracking & Telematics</p>
+						<h1>Track and monitor your fleet</h1>
+						<p>
+							Real-time visibility into the location, utilization, and health of vehicles, equipment, and trailers.
+						</p>
+						<div class="side-a__buttons">
+							<button class="button-type-one">Get started</button>
+							<button class="button-type-two">Get a tour</button>
+						</div>
+					</div>
+					<div class="side-b">
+						<div></div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section>
+			<div class="container">
+				<h2 class="section-title">Full fleet visibility</h2>
+			</div>
+
+		</section>
+
+		<section>
+			<div class="container">
+				<h2 class="section-title">Location-based automation</h2>
+			</div>
+
+
+		</section>
+
+		<section>
+			<div class="container">
+				<h2 class="section-title">Reliable Software</h2>
+			</div>
+
+
+		</section>
+
+		<section>
+			<div class="container">
+				<h2 class="section-title">Monitoring solution that gets results</h2>
+				<div class="stats-container">
+					<div class="single-stat"></div>
+					<div class="single-stat"></div>
+					<div class="single-stat"></div>
+				</div>
+			</div>
+
 		</section>
 
 		<section class="map-section">
