--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div class="hero-banner">
 					<div class="side-a">
 						<p>Products | Tracking & Telematics</p>
-						<h1>Track and monitor your fleet</h1>
+						<h1 class="section-title">Track and monitor your fleet</h1>
 						<p>
 							Real-time visibility into the location, utilization, and health of vehicles, equipment, and trailers.
 						</p>
@@ -72,9 +72,54 @@
 
 		<section>
 			<div class="container">
-				<h2 class="section-title">Full fleet visibility</h2>
+				<div class="reliable-software-container">
+					<div class="reliable-software-container__img-container">
+						<img src="./assets/media/img/reliable-software.jpg" alt="">
+					</div>
+					<div class="reliable-software-container__text-container">
+						<h2 class="section-title">Reliable Software</h2>
+						<p>
+							Say goodbye to frustrating tracking issues with the new Asset
+							Gateway Mini. Compact yet robust, it’s
+							designed for monitoring the location, usage, and health of
+							powered and unpowered assets. Monitor high
+							volume inventories with a small form factor and 5 year battery
+							life.
+						</p>
+						<div class="reliable-software-container__buttons">
+							<button class="button-type-one">Get started</button>
+							<button class="button-type-two">Get a tour</button>
+						</div>
+					</div>
+				</div>
 			</div>
+		</section>
 
+		<section>
+			<div class="container">
+				<div class="full-fleet-visibility-container">
+					<div class="side-a">
+						<h2 class="section-title">Full fleet visibility</h2>
+						<p>
+							Reduce your dependency on manual communication. Motive provides
+							real-time visibility across your physical
+							operations in one dashboard.
+							Automate your fleet visibility through alerts and actions based on
+							real-time vehicle and asset location
+							obtained from GPS fleet tracking.
+						</p>
+						<div class="reliable-software-container__buttons">
+							<button class="button-type-one">Get started</button>
+							<button class="button-type-two">Get a tour</button>
+						</div>
+					</div>
+					<div class="side-c">
+						<div>
+							<img src="./assets/media/img/section-full-fleet-visibility.jpg" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 
 		<section>
@@ -85,13 +130,7 @@
 
 		</section>
 
-		<section>
-			<div class="container">
-				<h2 class="section-title">Reliable Software</h2>
-			</div>
 
-
-		</section>
 
 		<section>
 			<div class="container">
@@ -111,7 +150,18 @@
 
 	</main>
 
-	<footer></footer>
+	<footer>
+		<div class="container">
+			<div class="footer-container">
+				<p class="item copyright">&copy; 2023 Mapster, Inc.</p>
+				<div class="footer-links">
+					<a href="#">Privacy Policy</a>
+					<a href="#">Terms of Service</a>
+					<a href="#">Disclaimers</a>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 
 <noscript>
