Add stats section

--- a/index.html
+++ b/index.html
@@ -88,11 +88,14 @@
 						</p>
 						<div class="reliable-software-container__buttons">
 							<button class="button-type-one">Get started</button>
-							<button class="button-type-two">Get a tour</button>
 						</div>
 					</div>
 				</div>
 			</div>
+		</section>
+
+		<section class="section-get-a-tour">
+			Get a tour
 		</section>
 
 		<section>
@@ -110,7 +113,6 @@
 						</p>
 						<div class="reliable-software-container__buttons">
 							<button class="button-type-one">Get started</button>
-							<button class="button-type-two">Get a tour</button>
 						</div>
 					</div>
 					<div class="side-c">
@@ -124,29 +126,25 @@
 
 		<section>
 			<div class="container">
-				<h2 class="section-title">Location-based automation</h2>
-			</div>
-
-
-		</section>
-
-
-
-		<section>
-			<div class="container">
 				<h2 class="section-title">Monitoring solution that gets results</h2>
 				<div class="stats-container">
-					<div class="single-stat"></div>
-					<div class="single-stat"></div>
-					<div class="single-stat"></div>
+					<div class="single-stat">
+						<h3>48%</h3>
+						<p>Less time spent tracking vehicles and assets</p>
+					</div>
+					<div class="single-stat">
+						<h3>21%</h3>
+						<p>Less time spent planning and scheduling dispatches</p>
+					</div>
+					<div class="single-stat">
+						<h3>70%</h3>
+						<p>Increase in asset utilization</p>
+					</div>
 				</div>
 			</div>
-
 		</section>
 
-		<section class="map-section">
-
-		</section>
+		<section class="map-section"></section>
 
 	</main>
 
