--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			</div>
 		</section>
 
-		<section>
+		<section class="stats-section__background">
 			<div class="container">
 				<h2 class="section-title">Monitoring solution that gets results</h2>
 				<div class="stats-container">
