--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							life.
 						</p>
 						<div class="reliable-software-container__buttons">
-							<button class="button-type-one">Get started</button>
+							<button class="button-type-one">Try Now</button>
 						</div>
 					</div>
 				</div>
@@ -97,7 +97,11 @@
 		</section>
 
 		<section class="section-get-a-tour">
-			Get a tour
+			<div class="container">
+				<div>
+					<h3>Get a Tour</h3>
+				</div>
+			</div>
 		</section>
 
 		<section>
@@ -114,7 +118,7 @@
 							obtained from GPS fleet tracking.
 						</p>
 						<div class="reliable-software-container__buttons">
-							<button class="button-type-one">Get started</button>
+							<button class="button-type-one">Know More</button>
 						</div>
 					</div>
 					<div class="side-c">
@@ -140,14 +144,15 @@
 					</div>
 					<div class="single-stat">
 						<h3>70%</h3>
-						<p>Increase in asset utilization</p>
+						<p>Increase in asset utilization and resource performance</p>
 					</div>
 				</div>
 			</div>
 		</section>
 
 		<section class="map-section">
-			<button id="track-btn" class="button-type-one">Track your fleet</button>
+			<h2 class="section-title">Track your fleet</h2>
+			<button id="track-btn" class="button-type-one">Get Location</button>
 			<div class="map-container">
 				<!-- Map -->
 				<div id="map"></div>
