--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta property="og:image" content="https://avatars.githubusercontent.com/u/67341828?v=4">
+	<meta property="og:image" content="https://stefanoturcarelli.github.io/gps-provider/assets/media/img/logo.png">
 	<link rel="icon" href="https://github.com/stefanoturcarelli/website/blob/main/assets/img/favicon.png?raw=true"
 		sizes="any">
 
@@ -20,10 +20,10 @@
 		rel="stylesheet">
 
 	<!-- Update these -->
-	<title>Project</title>
-	<meta name="description" content="Project">
-	<meta property="og:title" content="Stefano Turcarelli | Project">
-	<meta property="og:url" content="https://stefanoturcarelli.github.io/project/">
+	<title>Mapster GPS Provider</title>
+	<meta name="description" content="Mapster GPS Provider">
+	<meta property="og:title" content="Stefano Turcarelli | Mapster GPS Provider">
+	<meta property="og:url" content="https://stefanoturcarelli.github.io/gps-provider/">
 	<meta property="og:type" content="website">
 
 	<!-- CSS and JS -->
