Added link and hover effect to get a tour and fixed map border radius

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		<section class="section-get-a-tour">
 			<div class="container">
 				<div>
-					<h3>Get a Tour</h3>
+					<a href="#"><h3>Get a Tour</h3></a>
 				</div>
 			</div>
 		</section>
