--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 		<div class="container">
 			<div class="desktop-navbar-container">
 				<div class="logo-container">
-					<img src="./assets/media/img/logo.png" alt="mapster-logo">
+					<a href="#"><img src="./assets/media/img/logo.png" alt="mapster-logo"></a>
 				</div>
 				<div class="pages-container">
 					<a href="#">About</a>
 					<a href="#">Contact</a>
-					<button class="button-type-one" href="#">Login</>
+					<button class="button-type-one" href="#">Login</button>
 				</div>
 			</div>
 			<div class="mobile-navbar-container"></div>
