Changed name and added link to Track Fleet button

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							Real-time visibility into the location, utilization, and health of vehicles, equipment, and trailers.
 						</p>
 						<div class="side-a__buttons">
-							<button class="button-type-one">Get started</button>
+							<a href="index.html#map-section"><button class="button-type-one">Track fleet</button></a>
 							<button class="button-type-two">Get a tour</button>
 						</div>
 					</div>
@@ -150,7 +150,7 @@
 			</div>
 		</section>
 
-		<section class="map-section">
+		<section class="map-section" id="map-section">
 			<h2 class="section-title">Track your fleet</h2>
 			<button id="track-btn" class="button-type-one">Get Location</button>
 			<div class="map-container">
