Fixed spelling mistake on fleet visibility content

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					<div class="side-a">
 						<h2 class="section-title">Full fleet visibility</h2>
 						<p>
-							Reduce your dependency on manual communication. Motive provides
+							Reduce your dependency on manual communication. Mapster provides
 							real-time visibility across your physical
 							operations in one dashboard.
 							Automate your fleet visibility through alerts and actions based on
