Change responsive styles

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
 		<section class="section-get-a-tour">
 			<div class="container">
 				<div>
-					<a href="#"><h3>Get a Tour</h3></a>
+					<a href="#">
+						<h3>Get a Tour</h3>
+					</a>
 				</div>
 			</div>
 		</section>
